Update 451. Sort Characters By Frequency.md

--- a/451. Sort Characters By Frequency.md
+++ b/451. Sort Characters By Frequency.md
@@ -56,3 +56,49 @@ public:
 ```
 ## PICTURE
 ![image](https://github.com/PuiPu/leetcode/assets/127396685/32fdb84b-65b4-497d-aa04-d2f4e2a66b2c)
+
+## method 2 (using pair)
+## CODE
+```c++
+class Solution {
+public:
+    string frequencySort(string s) {
+        string str = "";
+        bool flag;
+        vector<pair<int,char>> vec;
+        vec.emplace_back(pair<int,char>(1,s[0]));
+        for (int i=1; i<s.length(); i++) {
+            flag = false;
+            for (int j=0; j<vec.size(); j++) {
+                if (s[i] == vec[j].second) {
+                    vec[j].first++;
+                    flag = true;
+                    break;
+                }
+            }
+            if (!flag) {
+                vec.emplace_back(pair<int,char>(1,s[i]));
+            }
+        }
+        
+        // using lambda function
+        sort(vec.begin(),vec.end(),[](pair<int,char> a, pair<int,char> b){
+            return a > b;
+        });
+        
+        for (int i=0; i<vec.size(); i++) {
+            for (int j=vec[i].first; j>0; j--) {
+                str += vec[i].second;
+            }
+        }
+        
+        return str;
+    }
+};
+```
+## PICTURE
+![image](https://github.com/PuiPu/leetcode/assets/127396685/8f847d52-39ec-46fb-bcbc-390b79ee2314)
+## slower !!!
+
+## link
+[C++ std::sort 排序用法與範例完整介紹](https://shengyu7697.github.io/std-sort/)
