--- a/451. Sort Characters By Frequency.md
+++ b/451. Sort Characters By Frequency.md
@@ -102,3 +102,4 @@ public:
 
 ## link
 [C++ std::sort 排序用法與範例完整介紹](https://shengyu7697.github.io/std-sort/)
+[C++ pair的基本用法总结（整理）](https://blog.csdn.net/sevenjoin/article/details/81937695)
