Update 206. Reverse Linked List.md

--- a/206. Reverse Linked List.md
+++ b/206. Reverse Linked List.md
@@ -1,5 +1,5 @@
 # using queue
-```
+```c++
 /**
  * Definition for singly-linked list.
  * struct ListNode {
@@ -31,4 +31,4 @@ public:
 ```
 # picture
 ![image](https://github.com/PuiPu/leetcode/assets/127396685/2222b189-88f8-49b0-bd93-73cbcd017d9a)
-### to slow !!!
+### too slow !!!
