Update 206. Reverse Linked List.md

--- a/206. Reverse Linked List.md
+++ b/206. Reverse Linked List.md
@@ -32,3 +32,22 @@ public:
 # picture
 ![image](https://github.com/PuiPu/leetcode/assets/127396685/2222b189-88f8-49b0-bd93-73cbcd017d9a)
 ### too slow !!!
+
+# direct (still not understand)
+```c++
+class Solution {
+public:
+    ListNode* reverseList(ListNode* head) {
+        ListNode* ans = nullptr;
+        
+        while (head != nullptr) {
+            ListNode* forward = head->next;
+            head->next = ans;
+            ans = head;
+            head = forward;
+        }
+        return ans;
+    }
+};
+```
+![image](https://github.com/PuiPu/leetcode/assets/127396685/b7c90d32-0b70-493c-a1ec-7af188c2e577)
